border and spacing fix

--- a/css/autoprefix.css
+++ b/css/autoprefix.css
@@ -54,6 +54,7 @@ header .nav-link {
   line-height: 4.4rem;
   padding: 0 1rem;
   -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
 
@@ -361,6 +362,7 @@ header .nav-link-bag {
 /************ COLLECTION ************/
 /************ COLLECTION ************/
 footer {
+  border-top: 6px solid #fff;
   font-size: 1.2rem;
   line-height: 1.33337;
   font-weight: 300;
@@ -570,6 +572,8 @@ footer .footer-locale span {
     height: 4.8rem;
     -webkit-transition: background 0.36s cubic-bezier(0.32, 0.08, 0.24, 1),
       height 0.36s cubic-bezier(0.32, 0.08, 0.24, 1);
+    -o-transition: background 0.36s cubic-bezier(0.32, 0.08, 0.24, 1),
+      height 0.36s cubic-bezier(0.32, 0.08, 0.24, 1);
     transition: background 0.36s cubic-bezier(0.32, 0.08, 0.24, 1),
       height 0.36s cubic-bezier(0.32, 0.08, 0.24, 1);
   }
@@ -629,6 +633,7 @@ footer .footer-locale span {
     height: 1px;
     background-color: #fff;
     -webkit-transition: margin-top 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+    -o-transition: margin-top 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: margin-top 0.3192s cubic-bezier(0.04, 0.04, 0.12, 0.96);
   }
   header .line-top {
@@ -640,11 +645,13 @@ footer .footer-locale span {
   header.active .line-top {
     margin-top: 0;
     -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     -webkit-transition: -webkit-transform 0.3192s 0.1s
       cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: -webkit-transform 0.3192s 0.1s
       cubic-bezier(0.04, 0.04, 0.12, 0.96);
+    -o-transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96),
       -webkit-transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
@@ -652,11 +659,13 @@ footer .footer-locale span {
   header.active .line-bottom {
     margin-top: 0;
     -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
     -webkit-transition: -webkit-transform 0.3192s 0.1s
       cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: -webkit-transform 0.3192s 0.1s
       cubic-bezier(0.04, 0.04, 0.12, 0.96);
+    -o-transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     transition: transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96),
       -webkit-transform 0.3192s 0.1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
@@ -675,6 +684,7 @@ footer .footer-locale span {
     width: 1.6rem;
     height: 4.8rem;
     -webkit-transition: opacity 3s;
+    -o-transition: opacity 3s;
     transition: opacity 3s;
   }
   header .nav-list-larger {
@@ -689,6 +699,7 @@ footer .footer-locale span {
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity 0.3s;
+    -o-transition: opacity 0.3s;
     transition: opacity 0.3s;
   }
   header .nav-list-larger .nav-item {
@@ -710,6 +721,7 @@ footer .footer-locale span {
   header.active .nav-link-bag {
     opacity: 0;
     -webkit-transition: opacity 0.3s;
+    -o-transition: opacity 0.3s;
     transition: opacity 0.3s;
   }
   header.active .nav-list-larger .nav-item {
@@ -772,6 +784,7 @@ footer .footer-locale span {
     width: 100%;
     z-index: -1;
     -webkit-transform: translateY(-100px);
+    -ms-transform: translateY(-100px);
     transform: translateY(-100px);
   }
   footer .sub-content .footer-list-item {
@@ -806,11 +819,13 @@ footer .footer-locale span {
     visibility: visible;
     z-index: 1;
     -webkit-transform: none;
+    -ms-transform: none;
     transform: none;
     transition: transform 0.3s ease, -webkit-transform 0.3s ease;
   }
   footer .toggle-box:checked ~ label h3::after {
     -webkit-transform: rotate(45deg) scale(1.08);
+    -ms-transform: rotate(45deg) scale(1.08);
     transform: rotate(45deg) scale(1.08);
   }
   footer .third-content {
@@ -827,9 +842,6 @@ footer .footer-locale span {
     -ms-flex-direction: column;
     flex-direction: column;
   }
-  footer .footer-legal-copyright {
-    margin-bottom: 0.8rem;
-  }
   footer .footer-legal-links {
     -webkit-box-flex: 0;
     -ms-flex-positive: 0;
@@ -837,6 +849,11 @@ footer .footer-locale span {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  footer .footer-legal-links a {
+    margin-top: 5px;
   }
   footer .footer-locale {
     -webkit-box-ordinal-group: 0;
@@ -978,4 +995,3 @@ footer .footer-locale span {
     font-size: 1.3rem;
   }
 }
-/*# sourceMappingURL=style.css.map */
